--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <footer>
 	<p class="footerText">Made by {% if site.your_link %}<a href="{{ site.your_link }}">{% endif %}{{ site.your_name }}{% if site.your_link %}</a>{% endif %}{% if site.your_city %} in {{ site.your_city }}{% endif %}</p>
+	<br>
+	<p class="footerText">Support via <a href="https://sasystems.supportbee.com/1016-knowledge-base">Helpdesk</a></p>
 	<div class="footerIcons">
 
 		{% if site.facebook_username %}
